# MediQ--RareInsight-CDSS

./: COMPLETE_DOCUMENTATION.md  example_clinical_inputs_report.md  ingestion_state.json  project_documentation.md  pyproject.toml  requirements.txt  run_dev.bat  streamlit_app.py  test.py  test_twin_rag.py
backend/: main.py
backend/api/: routes.py  twin_routes.py
backend/criteria/: __init__.py  drug_interactions.py
backend/data/: cases_clean.csv  clinical_synonyms.json  hallmarks.json
backend/data/hpo/: hpo_dictionary.json  metadata.json
backend/db/: database.py  init_db.py
backend/embeddings/: embedding_manager.py
backend/explainability/: explainer.py
backend/genomics/: genomic_reasoner.py
backend/hpo/: hpo_dictionary.json  hpo_mapper.py  hpo_updater.py
backend/ingestion/: chunker.py  fetcher.py  incremental_updater.py  ingestion_manager.py  metadata_extractor.py  vector_indexer.py
backend/models/: schemas.py  twin_schemas.py
backend/nlp/: __init__.py  clinical_nlp.py  entity_extractor.py  family_history_parser.py  medical_ner.py  negation_detector.py  symptom_normalizer.py  temporal_parser.py
backend/reasoning/: biomistral_engine.py  clinical_ai.py
backend/reranker/: clinical_reranker.py
backend/retriever/: disease_api_client.py  engine.py  hybrid_retriever.py  pubmed_retriever.py  query_builder.py  reindex.py
backend/twin/: __init__.py  builder.py  progression.py  rag_bridge.py  similarity.py  timeline.py
backend/utils/: common.py  config_loader.py  scheduler.py
chroma_db/: chroma.sqlite3
templates/: index.html
(+2 files in other folders)
