[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.99.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.30.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "medspacy>=1.3.1",
    "negspacy>=1.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "scispacy>=0.2.4",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.13",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]
